Edited links to Colab.

--- a/deliver/sez_eda.ipynb
+++ b/deliver/sez_eda.ipynb
@@ -1642,7 +1642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Colab](https://colab.research.google.com/drive/18bEoC_w9kz_-fBVy3F4MJNxyIBNVaNtN#scrollTo=6CENenHLcz1T)\n",
+    "[Colab](https://colab.research.google.com/drive/1ugKZxhmy71eURJSDRoJaJhG65jPUIhNc)\n",
     "lstm.ipynb"
    ]
   },
@@ -2065,7 +2065,7 @@
     "# 8) ____LSTM on mutated data____\n",
     "<a id=\"lstm_mut\"></a>\n",
     "\n",
-    "Colab (lstm.ipynb)"
+    "[Colab](https://colab.research.google.com/drive/1ugKZxhmy71eURJSDRoJaJhG65jPUIhNc) (lstm.ipynb)"
    ]
   },
   {
